# outline-triangulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/shaders/: quadratic-spline-fs.glsl  quadratic-spline-vs.glsl  simple-fs.glsl
include/: application.hpp  core.hpp  mesh.hpp  my_types.hpp  pipeline.hpp  utils.hpp
script/: compile_shaders.bat  compile_shaders.ps1  compile_shaders.sh
src/: application.cpp  core.cpp  main.cpp  mesh.cpp  pipeline.cpp  utils.cpp
